		* Fixes MMIO CRTC mirroring not existing on NV4 (only SR is mirrored)
	* Add attribute register commands and rename GDC to more common "GR" (Graphics Register)
	* Added errors when RAMHT, RAMRO, RAMFC and PGRAPH_CACHE failed to dump
	* Implemented PDCurses integration (Ported to CMake!)
	* Implement commands for x86 I/O ports: ioread8, ioread16, ioread32, iowrite8, iowrite16, iowrite32

Old release notes:

January 5, 2026: NVPlay 1.0.1 is now available.

Changes: 
	* Fix WriteVRAMRange32 being a copy of WriteMMIORange32
	* Use VGA port I/O rather than NVIDIA MMIO mirrors to write to VGA GDC, CRTC and SR. 
	It does not seem like these mirrors are complete or work on some gpus like NV4.
	* Fix copy-paste error leading to function pointer being logged 
	
December 31, 2025: NVPlay 1.0.0 is now available.

Changes:
	* Strip symbols in release mode builds
	* Fix -bootonly
	* Remove unfinished replay feature
	* Fix sequence register locking 
	* Don't log tests twice
	* fix logging name of script file when script file cannot be opened
	* Warn on Celsius MMIO dump
	
December 26, 2025: NVPlay 1.0.0-rc3 is now available December 25, 2025:

Changes:
	* Some text fixes 

December 21, 2025: NVPlay 1.0.0-rc2 is now available.

Changes:
	* Fixed test mode. 
	* Much shorter and less verbose help text with colours.

December 20, 2025: NVPlay 1.0.0-rc1 is now available.

Changes:
* Changed version number system (since version 0.x will go on forever otherwise)
* Added a "repl" loop that is the new default mode. Run "-test" to run tests. 
	* "?" or "help" at the REPL loop prints help.
	* "q" or "exit" exits.
* Riva 128 (NV3):
	* AGP defines added
	* Removed nv3_api.h, merged it with nv3.h
* Riva TNT (NV4) support
	* Currently: NV4_DumpVBIOS, NV4_DumpMMIO, NV4_PrintMfgInfo tests
	* Tested working on 16MB STB Velocity 4400 (VBIOS Version 1.01, 24 August 1998)
* Added support for TNT2 (NV5) and Celsius (NV1x) GPUs (untested!)
* Added HAL system