@@ -30,6 +30,7 @@ extern nvhal_entry_t nvhal_nv2;
 extern nvhal_entry_t nvhal_nv3;
 extern nvhal_entry_t nvhal_nv4;
 extern nvhal_entry_t nvhal_celsius;
+extern nvhal_entry_t nvhal_virge;
 
 //
 // Resource Manager 
