@@ -9,6 +9,8 @@
 */
 
 // Architecture Includes
+#include "core/gpu/gpu.h"
+#include "gpu.h"
 #include "nvplay.h"
 #include <architecture/generic/nv_generic.h>
 #include <architecture/nv1/nv1.h>
@@ -40,5 +42,7 @@ nv_device_info_t supported_devices[] =
 	{ PCI_DEVICE_NV1A, PCI_DEVICE_NV1A, PCI_VENDOR_NV, "GeForce 2 IGP (NV1A)", &nvhal_celsius },
 	{ PCI_DEVICE_NV1F, PCI_DEVICE_NV1F, PCI_VENDOR_NV, "GeForce 4 MX IGP (NV1F)", &nvhal_celsius },
 
+	// TEST
+	{ PCI_DEVICE_VIRGE_325, PCI_DEVICE_VIRGE_325, PCI_VENDOR_S3, "S3 Graphics, Inc. ViRGE (86C325)", &nvhal_virge },
 	{ 0, 0, 0, "", NULL }, // sentinel
 };
