@@ -32,22 +32,54 @@ void NVPlay_ReplHelp()
 
 void NVPlay_ReplIncrementCommandHistory()
 {
+    /*
+    // overwrite whatever the user typed with the new command history
+    size_t seek_length = strlen(command_history[command_history_id].cmd);
+    int32_t x = 0, y = 0;
+
+    Console_GetPosition(&x, &y);
+    x -= seek_length;
+
+    if (x < 0)
+        x = 0;
+
+    move(x, y);
+*/
+
+
+    Console_PushLine(command_history[command_history_id].cmd);
+
     command_history_id++;
 
     if (command_history_id >= MAX_COMMAND_HISTORY)
         command_history_id = (MAX_COMMAND_HISTORY - 1);
 
-    Console_PushLine(command_history[command_history_id].cmd);
+    Logging_Write(LOG_LEVEL_MESSAGE, "Console history is now %d (last command: %s)\n", command_history_id, command_history[command_history_id - 1].cmd);
 }
 
 void NVPlay_ReplDecrementCommandHistory()
 {
+    /*
+    // overwrite whatever the user typed with the new command history
+    size_t seek_length = strlen(command_history[command_history_id].cmd);
+    int32_t x = 0, y = 0;
+
+    Console_GetPosition(&x, &y);
+    x -= seek_length;
+
+    if (x < 0)
+        x = 0;
+
+    move(x, y);
+*/
+    Console_PushLine(command_history[command_history_id].cmd);
+
     command_history_id--;
 
     if (command_history_id < 0)
         command_history_id = 0;
 
-    Console_PushLine(command_history[command_history_id].cmd);
+    Logging_Write(LOG_LEVEL_MESSAGE, "Console history is now %d (last command: %s)\n", command_history_id, command_history[command_history_id].cmd);
 }
 
 void NVPlay_ReplOnCommandHistoryFull()
@@ -85,6 +117,7 @@ void NVPlay_Repl()
                 int32_t last_char = -1;
                 input_recv = Input_GetStringAndChar(repl_string, MAX_STR, &last_char);
 
+                /* Yes it's inverted. Newer commands are actually at the "end" of the ring buffer*/
                 switch (last_char)
                 {
                     case KEY_UP:
@@ -99,16 +132,16 @@ void NVPlay_Repl()
         else
             fgets(repl_string, MAX_STR, stdin);
 
+        // get rid of the newline (could call String_GetRTrim(String_GetLTrim) but that does a lot of unnecessary stuff we don't need yet)
+        repl_string[strcspn(repl_string, "\r\n")] = '\0';
+        
+        strncpy(command_history[command_history_id].cmd, repl_string, MAX_STR);
+
          // fgets above blocks on dumbconsole, on curses, it doesn't
         command_history_id++;
 
         if (command_history_id >= MAX_COMMAND_HISTORY)
             NVPlay_ReplOnCommandHistoryFull();
-
-        strncpy(command_history[command_history_id].cmd, repl_string, MAX_STR);
-
-        // get rid of the newline (could call String_GetRTrim(String_GetLTrim) but that does a lot of unnecessary stuff we don't need yet)
-        repl_string[strcspn(repl_string, "\r\n")] = '\0';
 
         // gcc only so it is fine
         if (!strcasecmp(repl_string, COMMAND_EXIT)
